// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChangePassword /> should render 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Password
    </h2>
  </Box__BoxGroupHeader>
  <Password__FormButton>
    <form
      onSubmit={[Function]}
    >
      <InputError
        error=""
        label="Old Password"
        name="oldPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
      <InputError
        error=""
        label="New password"
        name="newPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
      <InputError
        error=""
        label="Confirm New Password"
        name="confirmPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
      <Password__ChangePasswordFooter>
        <span>
          Last changed 
          <RelativeTime
            time="2018-02-14T12:00:00.000000Z"
          />
        </span>
        <SaveButton
          altText="Change"
          pullRight={true}
        />
      </Password__ChangePasswordFooter>
    </form>
  </Password__FormButton>
</Box__BoxGroup>
`;

exports[`<ChangePassword /> should render placeholder when [props.ready=false] 1`] = `<LoadingPlaceholder />`;

exports[`<ChangePassword /> should render with error 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Password
    </h2>
  </Box__BoxGroupHeader>
  <Password__FormButton>
    <form
      onSubmit={[Function]}
    >
      <InputError
        error="existing error"
        label="Old Password"
        name="oldPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
      <InputError
        error=""
        label="New password"
        name="newPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
      <InputError
        error=""
        label="Confirm New Password"
        name="confirmPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
      <Password__ChangePasswordFooter>
        <span>
          Last changed 
          <RelativeTime
            time="2018-02-14T12:00:00.000000Z"
          />
        </span>
        <SaveButton
          altText="Change"
          pullRight={true}
        />
      </Password__ChangePasswordFooter>
    </form>
  </Password__FormButton>
</Box__BoxGroup>
`;
